--- a/userdata/install
+++ b/userdata/install
@@ -29,10 +29,13 @@ echo tracer005
 
 cd Deploy-Gs
 echo tracer006
-#-->Update Deploy-GS.ps1's first line to '/opt/gs'
-sed -i "s#$path_root = 'C:\gs'#$path_root = '/opt/gs'#" Deploy-GS.ps1
+
+pwd
 echo tracer007
 
-sudo pwsh
+#-->Update Deploy-GS.ps1's first line to '/opt/gs'
+sed -i "s#$path_root = 'C:\gs'#$path_root = '/opt/gs'#" Deploy-GS.ps1
+echo tracer008
+
 # The following runs for 15+ minutes.
-.\Deploy-GS.ps1
+sudo pwsh .\\Deploy-GS.ps1 &> /tmp/pwsh-gs
